Need to switch to autotools, add to TODO

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+General:
+	switch to autotools for building
+
 Features:
 	Command line options (see below)
 	Get LCID from Unix using uloc_getLCID from libicu
